--- a/Project-TimViecLam/public/home/css/style.css
+++ b/Project-TimViecLam/public/home/css/style.css
@@ -95,61 +95,6 @@ body {
     cursor: pointer;
 }
 
-.dropdown:hover>.dropdown-menu {
-    display: block;
-}
-
-.dropdown>.dropdown-toggle:active {
-    pointer-events: none;
-}
-
-.font-header .nav-item .nav-link {
-    color: black;
-    font-weight: bold;
-    font-size: 14px;
-}
-
-.font-header .nav-item .nav-link:hover {
-    color: var(--Orange);
-}
-
-.dropdown-menu-top .nav-item .nav-link:hover {
-    color: var(--while);
-}
-
-.btn:not(:disabled):not(.disabled) {
-    cursor: pointer;
-}
-
-.btn-bd-submit {
-    background-color: var(--Blue);
-    font-weight: 800;
-    color: var(--while);
-    border-color: var(--Blue-While);
-}
-
-.dropdown-menu {
-    background-color: var(--Blue-While);
-}
-
-.dropdown-menu a {
-    font-weight: 600;
-}
-
-.dropdown-item:focus,
-.dropdown-item:hover {
-    color: #ffffff;
-    text-decoration: none;
-    background-color: var(--Blue-Whil);
-}
-
-.btn-bd-submit:active,
-.btn-bd-submit:hover {
-    color: var(--Blue);
-    background-color: var(--Blue);
-    border-color: var(--Blue);
-}
-
 .company_name strong {
     font-size: 16px;
 }
@@ -1463,3 +1408,115 @@ input:focus {
     max-height: 300px!important;
 }
 /* End Custom Select2 */
+
+/* Custom Main Search */
+.main-search-bar {
+    margin-top: 0px;
+    background-color: var(--Blue);
+    border-radius: 3px;
+}
+
+.input-field {
+    height: 45px;
+    margin: 10px 0;
+    background-color: #ffffff;
+    border-radius: 2px;
+    display: grid;
+    grid-template-columns: 15% 85%;
+    padding: 0 0.4rem;
+}
+
+.input-field i {
+    text-align: center;
+    line-height: 45px;
+    color: var(--Blue-While);
+    font-size: 1.1rem;
+}
+
+.input-field input {
+    background: none;
+    outline: none;
+    border: none;
+    line-height: 1;
+    font-weight: 700;
+    font-size: 1.1rem;
+    color: #333;
+}
+
+.input-field select {
+    background: none;
+    outline: none;
+    border: none;
+    line-height: 1;
+    font-weight: 700;
+    font-size: 1.1rem;
+    color: #333;
+}
+
+.input-field input::placeholder {
+    color: rgb(151, 142, 142);
+    font-weight: 500;
+}
+
+.search-custom__btn {
+    width: 100%;
+    height: 45px;
+    border-radius: 3px;
+    cursor: pointer;
+    background-color: #ddad0e;
+    color: #000000;
+    text-transform: uppercase;
+    font-weight: 700;
+    margin: 10px 0;
+    transition: 0.5s;
+    border: none;
+}
+
+.search-custom__btn:focus {
+    outline: none !important;
+    box-shadow: none !important;
+}
+
+.bootstrap-select__icon {
+    position: absolute;
+    left: 26px;
+    top: 19px;
+    font-size: 1.1rem;
+    color: var(--Blue-While);
+    z-index: 1;
+}
+
+.bootstrap-select-city__custom .filter-option {
+    height: 60% !important;
+    margin-left: 40px !important;
+    overflow: inherit !important;
+}
+
+.bootstrap-select-city__custom .btn {
+    background-color: #f7f7f7!important;
+    color: #858383f2;
+    text-transform: capitalize;
+    font-weight: 500;
+    border: none;
+    width: 100%;
+    height: 45px;
+    border-radius: 3px;
+    cursor: pointer;
+    color: #000000;
+    text-transform: capitalize;
+    font-weight: 500;
+    margin: 10px 0;
+    transition: 0.5s;
+}
+
+.bootstrap-select-city__custom .dropdown-toggle:focus {
+    outline: none !important;
+    box-shadow: none !important;
+}
+
+.bootstrap-select-city__custom .dropdown-menu li a:hover {
+    color: #ffffff;
+    text-decoration: none;
+    background-color: #008db1;
+}
+/* End Custom Main Search */
