--- a/Front End/ThinhNQ/css/style.css
+++ b/Front End/ThinhNQ/css/style.css
@@ -14,6 +14,7 @@ body {
   --Blue: #0091cf;
   --Blue-While: #18a3e8;
   --Orange: #f38121;
+
 }
 
 .container-max {
@@ -3577,3 +3578,79 @@ a:hover {
     font-weight: 600;
     color: #009cde;
 }
+/* modal title */
+.el-dialog-modal-title{
+  color: #1899e1!important;
+  font-size: 15px;
+}
+.form-group-el-dialog-modal {
+  margin-bottom: 15px;
+}
+.modal-body .el-dialog__body .mw_form .form-group-el-dialog-modal .el-dialog-modal-title-spam{
+  font-weight: 500!important;
+  margin-bottom: 5px;
+}
+.mw_form .form-item-modal input{
+  width: 100%;
+  padding-left: 40px;
+    height: 38px;
+    background-image: none;
+    border-radius: 4px;
+    border: 1px solid #bfcbd9;
+    border-radius: 2px;
+    background-color: #fff;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+}
+.el-dialog__header{
+  font-size: 18px;
+  font-weight: 700 !important;
+}
+.mw_form .el-dialog-title-section {
+  float: left;
+  margin-bottom: 10px;
+  font-size: 14px;
+   color: #333;
+   font-weight: 600;
+}
+.mw_form .form-item-modal textarea{
+  width: 100%;
+  height: 120px;
+}
+.modal-content-width{
+  width: 1000px !important;
+  top: 40px;
+  right: 200px;
+}
+.mw_form label span {
+  color: #f15064!important;
+}
+.icon-modal{
+  position: absolute;
+  top: 95px;
+  left: 30px;
+  color: #666;
+  font-weight: 300;
+}
+.icon-modal-phone{
+  position: absolute;
+  top: 180px;
+  left: 30px;
+  color: #666;
+  font-weight: 600;
+}
+.icon-modal-email{
+  position: absolute;
+  top: 265px;
+  left: 30px;
+  color: #666;
+  font-weight: 300;
+}
+.icon-modal-building{
+  position: absolute;
+  top: 350px;
+  left: 30px;
+  color: #666;
+  font-weight: 300;
+}
+/*  */
