--- a/Project-TimViecLam/public/admin/css/style.css
+++ b/Project-TimViecLam/public/admin/css/style.css
@@ -123,3 +123,201 @@
     color: #b8b9bb !important;
     font-style: italic !important;
 }
+
+
+/* Step update profile */
+.wizard-progress-with-circle {
+    position: relative;
+    top: 34px;
+    height: 3px;
+}
+
+.wizard-progress-bar {
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    -webkit-transition: width .3s ease;
+    transition: width .3s ease;
+}
+
+.background-progress-bar {
+    background-color: #3e96d6;
+    color: #3e96d6;
+}
+.wizard-nav-pills {
+    margin-top: 0;
+    position: relative;
+    text-align: center;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    list-style: none;
+}
+
+.wizard-progress-with-circle {
+    position: relative;
+    top: 40px;
+    height: 3px;
+    width: 90%;
+    left: 70px;
+}
+
+.wizard-progress-bar {
+    float: left;
+    width: 0;
+    height: 100%;
+    font-size: 12px;
+    line-height: 20px;
+    color: #fff;
+    text-align: center;
+    background-color: #3e96d6;
+    -webkit-box-shadow: inset 0 -1px 0 rgba(0,0,0,.15);
+    box-shadow: inset 0 -1px 0 rgba(0,0,0,.15);
+    -webkit-transition: width .6s ease;
+    transition: width .6s ease;
+}
+
+.wizard-nav-pills li {
+    -webkit-box-flex: 1;
+    -ms-flex: 1;
+    flex: 1;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    -ms-flex-positive: 1;
+    flex-grow: 1;
+}
+.wizard-nav-pills>li>a {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    padding: 0;
+    margin: 0 auto;
+    color: #3e96d6;
+    position: relative;
+    top: 3px;
+}
+
+.wizard-nav-pills>li.active>a:hover {
+    background-color: transparent;
+    -webkit-transition: font-size .2s linear;
+    transition: font-size .2s linear;
+}
+
+.wizard-icon-circle {
+    font-size: 18px;
+    border: 3px solid #3e96d6;
+    border-radius: 50%;
+    font-weight: 600;
+    width: 70px;
+    height: 70px;
+    background-color: #fff;
+    position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -ms-flex-line-pack: center;
+    align-content: center;
+    margin-left: 60px;
+}
+
+.wizard-icon-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-flex: 1;
+    -ms-flex: 1;
+    flex: 1;
+    border-radius: 40%;
+}
+
+.wizard-nav-pills>li.active>a:hover .wizard-icon {
+    color: #fff;
+    font-size: 24px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-transition: all .2s linear;
+    transition: all .2s linear;
+    font-style: inherit;
+}
+
+.stepTitle{
+    font-size: 15px;
+    font-weight: 500;
+    margin-top: 5px;
+    color: #737c88;
+}
+
+ .wizard-nav-pills>li.active>a .wizard-icon,  .wizard-nav-pills>li.active>a:focus .wizard-icon,  .wizard-nav-pills>li.active>a:hover .wizard-icon {
+    color: #fff;
+    font-size: 24px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-transition: all .2s linear;
+    transition: all .2s linear;
+    font-style: inherit;
+}
+
+
+.button_public {
+    padding: 15px 25px !important;
+    width: 150px !important;
+    display: inline-block;
+    line-height: 1;
+    white-space: nowrap;
+    cursor: pointer;
+    border: 1px solid #c4c4c4;
+    color: #1f2d3d;
+    margin: 0;
+    padding: 10px 15px;
+    border-radius: 4px;
+    color: #fff;
+    background-color: #009ce0;
+    border-color: #009ce0;
+}
+
+
+.step-active a .wizard-icon-circle{
+    background-color: #009ce0!important;
+}
+
+.step-active a .wizard-icon-circle .wizard-icon-container{
+    color: #fff;
+}
+
+.step-active a .stepTitle{
+    font-weight: 600 !important;
+    color: #009ce0;
+}
+
+
+
+
+
+
+
+/* Step update profile */
